--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,7 +23,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - run: sudo apt-get update && sudo apt-get install -y <required_package>
+    - run: sudo apt-get update
     
     - name: Set up JDK 11
       uses: actions/setup-java@v4
