--- a/.github/workflows/newmaven.yml
+++ b/.github/workflows/newmaven.yml
@@ -21,31 +21,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
       - name: Set up JDK 11
         uses: actions/setup-java@v4
         with:
           java-version: '11'
           distribution: 'temurin'
           cache: maven
+      - name: Running Test Automation Framework with Maven
+        run: mvn test -X "-Dbrowser=chrome" "-DisLambdaTest=true" "-DisHeadless=false"
 
-      - name: Install Maven Dependencies
-        run: mvn dependency:resolve
-
-      - name: Compile the Project
-        run: mvn compile
-
-      - name: Run Tests
-        run: mvn test -X -Dbrowser=chrome -DisLambdaTest=true -DisHeadless=false
-
-      - name: Upload Test Logs
+      - name: Upload Test logs
         if: always()
         uses: actions/upload-artifact@v4.4.3
         with:
-          name: Test Logs
-          path: log/
+          name: Test logs
+          path: logs/
 
       - name: Upload Test Reports
         if: always()
