--- a/.github/workflows/newmaven.yml
+++ b/.github/workflows/newmaven.yml
@@ -61,7 +61,7 @@ jobs:
 
         run:
           mkdir -p public/extent-reports
-          cp -R report.html public/extent-reports/
+          cp  report.html public/extent-reports/
           cp -R screenshots/ public/extent-reports/screenshots/
           ls -l
 
