--- a/.github/workflows/newmaven.yml
+++ b/.github/workflows/newmaven.yml
@@ -60,10 +60,20 @@ jobs:
         if: always()
 
         run:
+       
+
+         
           mkdir -p public/extent-reports
-          cp  report.html public/extent-reports/
+
+
+          cp report.html public/extent-reports/
+
+
           cp -R screenshots/ public/extent-reports/screenshots/
-          ls -l
+
+
+          ls -l public/extent-reports
+
 
       - name: Deploy
         if: always()
