--- a/.github/workflows/newmaven.yml
+++ b/.github/workflows/newmaven.yml
@@ -60,32 +60,9 @@ jobs:
 
       - name: Deploy to GitHub Actions Pages
         if: always()
-        run: |
-          # Set up git configuration
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-
-          # Check if gh-actions-pages branch exists, if not create it
-          git fetch
-          if git show-ref --verify --quiet refs/heads/gh-actions-pages; then
-            echo "Branch gh-actions-pages exists, checking out the branch..."
-            git checkout gh-actions-pages
-          else
-            echo "Branch gh-actions-pages does not exist, creating and checking out a new branch..."
-            git checkout --orphan gh-actions-pages
-          fi
-
-          # Clone the repository if not already done
-          if [ ! -d "gh-actions-pages" ]; then
-            echo "Cloning the repository into 'gh-actions-pages' directory..."
-            git clone --branch=gh-actions-pages https://${{ secrets.GITHUB_TOKEN }}@github.com/ankit19apr/automation-framework.git gh-actions-pages
-          fi
-          
-          # Create the reports directory and copy the reports
-          mkdir -p extent-reports
-          cp -R ../public/extent-reports-githubActions/* extent-reports/
-
-          # Commit and push the changes to GitHub Actions Pages
-          git add .
-          git commit -m "Deploy test reports"
-          git push origin gh-actions-pages
+        uses: JamesIves/github-pages-deploy-action@v4.7.1
+        with:
+          folder: public/extent-reports-githubActions
+          token: ${{ secrets.PersonalAccessToken }}
+          clean: true
+        
