--- a/.github/workflows/newmaven.yml
+++ b/.github/workflows/newmaven.yml
@@ -54,10 +54,13 @@ jobs:
       - name: Copy report to gh.pages folder
         if: always()
         run: |
+          echo "Creating the 'public/extent-reports-githubActions' directory..."
           mkdir -p public/extent-reports-githubActions
+          echo "Copying report.html to the folder..."
           cp report.html public/extent-reports-githubActions/
+          echo "Listing contents of the folder to verify the copy..."
           ls -l public/extent-reports-githubActions
-
+          
       - name: Deploy to GitHub Actions Pages
         if: always()
         uses: JamesIves/github-pages-deploy-action@v4.7.1
