--- a/config/QA.properties
+++ b/config/QA.properties
@@ -1,2 +1,5 @@
 URL = https://www.automationpractice.pl
 MAX_NUMBER_OF_ATTEMPTS = 3
+USER = ankitqatechie
+ACCESSKEY = qcAAZkom4NiVZaRidReoCUJtD94xCLb45XqkBwpbbehaYESQQe
+
