--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
 						<suiteXmlFile>testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
 					<systemPropertyVariables>
-						<browser>chrome</browser>
-						<isLambdaTest>true</isLambdaTest>
-						<isHeadless>true</isHeadless>
+						<browser>${browser}</browser>
+						<isLambdaTest>${isLambdaTest}</isLambdaTest>
+						<isHeadless>${isHeadless}</isHeadless>
 
 					</systemPropertyVariables>
 				</configuration>
