--- a/.github/workflows/newmaven.yml
+++ b/.github/workflows/newmaven.yml
@@ -31,7 +31,7 @@ jobs:
           cache: maven
 
       - name: Running Test Automation Framework with Maven
-        run: mvn test -X "-Dbrowser=chrome" "-DisLambdaTest=true" "-DisHeadless=false"
+        run: mvn test -X -Dbrowser=chrome -DisLambdaTest=true -DisHeadless=false
 
       - name: Upload Test logs
         if: always()
@@ -39,6 +39,13 @@ jobs:
         with:
           name: Test logs
           path: logs/
+
+      - name: Upload Screenshots as Artifacts
+        if: always()
+        uses: actions/upload-artifact@v4.4.3
+        with:
+          name: screenshots
+          path: screenshots/
 
       - name: Upload HTML Report as Artifact
         if: always()
